--- a/Final project/index.html
+++ b/Final project/index.html
@@ -36,7 +36,7 @@
 <body>
     <div class="chart-container">
         <h1 class="headline">
-            Trial Fertility rates are falling around the world, this is good news for Africa
+            Fertility rates are falling around the world, this is good news for Africa
         </h1>
             <img src="world_edited.svg">
             <img src="us_china_edited.svg">
